# agentic-engineering-pipeline

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  fly.toml  pyproject.toml
.claude/: settings.json
.claude/agents/: ai-reviewer.md  backend-tester.md  clarifier.md  frontend-tester.md  human-gate.md  linear.md  orchestrator.md  planner.md  pr-creator.md  pr-remediator.md  programmer.md  remediator.md  repository-dispatch-linear.md  researcher.md  test-e2e.md  test-integration.md  test-unit.md  unit-tester.md
.claude/commands/: new-agent.md  new-workflow.md  run-pipeline.md  validate-all.md
.github/workflows/: ci-remediate.yml  ci.yml  claude-code-review.yml  claude.yml  cleanup-skipped-runs.yml  dependabot-review.yml  dogfood-ci-remediate.yml  dogfood-issue-to-pr.yml  dogfood-pr-describe.yml  dogfood-pr-review.yml  dogfood-quality-sweep.yml  issue-to-pr.yml  local-pr-review.yml  (+9 more)
dispatcher/: package-lock.json  package.json
sandbox/: Dockerfile  docker-compose.yml
scaffold/: bootstrap.sh
tests/: conftest.py  test_agent_definitions.py  test_bootstrap.py  test_briefs.py  test_ci_remediate.py  test_clarification.py  test_dependabot_review.py  test_dogfood_workflows.py  test_gates.py  test_issue_to_pr.py  test_linear_client.py  test_linear_poller.py  test_mapper.py  test_mcp_config.py  test_orchestrator.py  test_parser.py  test_pr_describe.py  test_pr_review.py  test_progress_reporter.py  test_quality_sweep.py  test_repository_dispatch_linear.py  test_sandbox.py  test_stale_pr_nudge.py  test_state_machine.py  test_webhook.py
(+36 files in other folders)
